--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,7 +3,11 @@
         {
             "route": "/authenticated/*",
             "allowedRoles": [ "authenticated" ]
-        }
+        },
+       {
+            "route": "/authenticated/*",
+            "allowedRoles": [ "authenticated" ]
+       }
     ],
     "auth": {
       "identityProviders": {
