--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -5,7 +5,7 @@
             "allowedRoles": [ "authenticated" ]
         },
        {
-            "route": "/authenticated/*",
+            "route": "/anonymous/*",
             "allowedRoles": [ "authenticated" ]
        }
     ],
