--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
    "routes": [
        {
       "route": "/",
-      "rewrite": "/.auth/login/aad"
+      "rewrite": "/.auth/login/aad?post_login_redirect_uri=https://orange-grass-06f7acb10.1.azurestaticapps.net/anonymous"
        },
         {
             "route": "/authenticated/*",
@@ -10,7 +10,7 @@
         },
        {
             "route": "/anonymous/*",
-            "allowedRoles": [ "authenticated" ]
+            "allowedRoles": [*]
        }
     ],
     "auth": {
