--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
    "routes": [
        {
       "route": "/",
-      "rewrite": "/.auth/login/aad?post_login_redirect_uri=https://orange-grass-06f7acb10.1.azurestaticapps.net/anonymous"
+      "redirect": "/.auth/login/aad?post_login_redirect_uri=https://orange-grass-06f7acb10.1.azurestaticapps.net/anonymous"
        },
         {
             "route": "/authenticated/*",
